--- a/style.css
+++ b/style.css
@@ -123,6 +123,11 @@ hr{
 	border-radius: 0!important;
 	height: 1.4rem!important;
 }
+.progress-bar{
+	text-align: right;
+	font-weight: bold;
+	padding-right: 8px;
+}
 .carousel-before-portfolio{
 	background-color: #2ecc71!important;
 }
